# facebook_bot_eliza

./: Cargo.toml  package.json  serverless.yml
src/: config.rs  eliza_bot.rs  main.rs  messages.rs
