[package]
name = "hello"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
lambda_http = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master"}
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
http = "*"
reqwest = { version = "0.10", features = ["json"] }
lazy_static = "1.4"

log = "^0.4"
env_logger = "^0.7"